# herbie

./: #ARRAYS.md#  .#ARRAYS.md  .dockerignore  .fmt.rkt  .gitignore  .gitmodules  .travis.yml  2cos.fpcore  AGENT.md  AGENTS.md  ASPLOS25.md  Dockerfile  EDITING.md  Expr.hs  INSTALL.md  LICENSE.md  Makefile  README.md  asdf.fpcore  batch-code.md  benchout  benchout-detour  bits  branch-triage-2026-03-23.md  casio.rkt  config.rktd  cost.c  countsubexprs.py  crashes.fpcore  deduplicate.rkt  egglogplot.py  egglogreport.sh  err.csv  evalegglog.sh  example.fpcore  file-report.sh  get-errors.rkt  graphs.py  mixed_trig.rkt  optest.fpcore  (+20 more)
asplos15/: .gitignore  Makefile  SIunits.sty  abstract-james.tex  abstract.tex  background.tex  cleveref.sty  conclusion.tex  evaluation.tex  futurework.tex  introduction.tex  jpaper.cls  macros.tex  outline.txt  overview.tex  paper.tex  references.bib  relatedwork.tex  synthesis.tex
baseline/: profile.json  results.json  timeline.html  timeline.json
bench/: .gitignore  a-benchmark.fpcore  arrays.fpcore  arvind.rkt  axch.rkt  basic.rkt  bulmash.rkt  demo.fpcore  every-cs.rkt  exp.rkt  fast-math.rkt  graphics.fpcore  growlibm-helmholtz.fpcore  gui.fpcore  haskell.fpcore  haskell.rkt  hyperbolic.rkt  jmatjs.rkt  kahan.rkt  keplerian.fpcore  latlong.rkt  logistic.rkt  logistic.scm  logistic1.rkt  logistic2.rkt  longley-rice.fpcore  misc.rkt  muldiv.rkt  omerc.fpcore  orbital-motion.fpcore  orbitalMotion.fpcore  pbrt.fpcore  polynomial-cancellation.rkt  posits.fpcore  preproccont.fpcore  quadratic.rkt  quadratic.scm  regression.fpcore  rosa.rkt  tea-flows.rkt  (+6 more)
bot/: .gitignore  run.sh
casio/: Makefile  alt-table.rkt  alternative.rkt  analyze-local-error.rkt  analyze-subexpressions.rkt  brute-force.rkt  cancellation.rkt  combine-alts.rkt  common.rkt  compile.rkt  config.rkt  debug.rkt  debugtools.rkt  egraph.rkt  expr-enum.rkt  htmltools.rkt  infer-regimes.rkt  load-bench.rkt  load-tests.rkt  localize-error.rkt  locations.rkt  main.rkt  make-index.rkt  make-report.rkt  markdown-tools.rkt  matcher.rkt  my-match.rkt  new-main.rkt  pareto-alts.rkt  pavel-simplification.rkt  periodicity.rkt  points.rkt  process-info.rkt  programs.rkt  redgreen.rkt  report.html  rules.rkt  shell.rkt  simplify.rkt  syntax.rkt  (+7 more)
compile/: Makefile  all.sh  bruteforce.c  casio-runtime.csv  compile.rkt  convergence.c  dmax-all.sh  graph.py  makejson.py  max-error-hour.c  mpfr-bits.csv  nr.dd.csv  nr.df.csv  nr.id.csv  nr.if.csv  nr.od.csv  nr.of.csv  results-to-csv.rkt  run.sh  runtime.csv  shortnames.csv  tc.dd.csv  tc.df.csv  tc.id.csv  tc.if.csv  tc.names.csv  tc.od.csv  tc.of.csv  test.c  texify.rkt
dash/: .gitignore  dash.css  index.html  publish.sh
data/: .gitignore  Makefile  all.csv  all.id.csv  all.if.csv  all.il.csv  all.im.csv  all.od.csv  all.of.csv  all.ol.csv  casio-runtime.csv  graph.py  mpfr-bits.csv  noregimes.id.csv  noregimes.if.csv  noregimes.il.csv  noregimes.im.csv  noregimes.od.csv  noregimes.of.csv  noregimes.ol.csv  noregimes.om.csv  regimes.csv  regimes.id.csv  regimes.if.csv  regimes.il.csv  regimes.im.csv  regimes.od.csv  regimes.of.csv  regimes.ol.csv  regimes.om.csv  sample-points.csv
debugging_files/: backward-pass-test.rkt  sin-correctness.rkt  sin_test.rkt  tune-operations-1d.rkt  tune-operations.rkt
doc/: Docker.md  Makefile  pldi15-submit.tar  tr.tex  tr.txt
egg-herbie/: .gitignore  Cargo.toml  Makefile  README.md  deploy.sh  egg-interface.rkt  info.rkt  main.rkt  rust-toolchain.toml  to-egg-pattern.rkt
egg-herbie/src/: accelerator.rs  bug.rs  detour.rs  herbie.egg  lib.rs  math.rs  rules.rs
egg-herbie/tests/: tests.rs
egglog-all/: profile.json  results.json  timeline.html  timeline.json
egglog-herbie/: .gitignore  Cargo.toml  LICENSE  README.md  ffi.rkt  info.rkt  main-run-egglog.rkt  main.rkt  test-run-egglog.rkt  tests.rkt
egglog-herbie/src/: lib.rs
egglog-timed/: Cargo.toml
egglog-timed/src/: main.rs
rival-herbie/: Cargo.toml  info.rkt  main.rkt  ops.rkt
rival-herbie/eval/: main.rkt
rival-herbie/src/: discretization.rs  lib.rs  parser.rs
rival-rs/: Cargo.toml
rival-rs/src/: lib.rs  mpfr.rs
rival-rs/src/eval/: execute.rs  instructions.rs  machine.rs  macros.rs  mod.rs  ops.rs  run.rs  tricks.rs
rival-rs/src/eval/adjust/: mod.rs  path_reduction.rs  precision.rs
rival-rs/src/interval/: arithmetic.rs  boolean.rs  constants.rs  core.rs  fmod.rs  mod.rs  pow.rs  trig.rs  value.rs
(+1755 files in other folders)
