[package]
name = "egg-herbie"
version = "0.3.0"
authors = [ "Oliver Flatt <oflatt@gmail.com>", "Max Willsey <me@mwillsey.com>" ]
edition = "2018"

[dependencies]
egg = "0.9.1"

log = "0.4"
indexmap = "1"
libc = "0.2.125"

num-bigint = "0.4.3"
num-integer = "0.1.45"
num-rational = "0.4.0"
num-traits = "0.2.15"
env_logger = { version = "0.9", default-features = false }

egg-smol = { path = "../../egg-smol" }
#egg-smol = { git = "ssh://git@github.com/oflatt/egg-smol.git", rev = "037ddeda921111ba6112f75a3f9e2a1e55f69c55" }
symbolic_expressions = "5.0.3"

[lib]
name = "egg_math"
crate-type = ["rlib", "cdylib"]

[profile.test]
debug = true
opt-level = 1

[profile.release]
debug = true
lto = "fat"
codegen-units = 1