[package]
name = "egg-herbie"
version = "0.3.0"
authors = [ "Oliver Flatt <oflatt@gmail.com>", "Max Willsey <me@mwillsey.com>" ]
edition = "2021"

[dependencies]
egg = { git = "https://github.com/egraphs-good/egg.git", rev = "c11d03db646aca5f55df2632927eec958e1f4d4d" }
egraph-serialize = "0.1.0"

log = "0.4"
indexmap = "1"
libc = "0.2.125"

num-bigint = "0.4.3"
num-integer = "0.1.45"
num-rational = "0.4.0"
num-traits = "0.2.15"
env_logger = { version = "0.9", default-features = false }

[lib]
name = "egg_math"
crate-type = ["rlib", "cdylib"]

[profile.test]
debug = true
opt-level = 1

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
