[package]
name = "egglog-herbie"
version = "0.1.0"
authors = [ "Brett Saiki <bksaiki@gmail.com>" ]
edition = "2021"

[dependencies]
egglog = { git = "https://github.com/bksaiki/egglog.git", rev = "885cd7786cbc69dd8f0dbb324190f5131757baba" }
libc = "0.2"

[lib]
name = "egglog_herbie"
crate-type = ["rlib", "cdylib"]
