[package]
name = "rival-herbie"
version = "0.1.0"
edition = "2021"

[lib]
name = "rival_herbie"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
rug = { version = "1", default-features = false, features = ["integer","float"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"

# Local path to the Rival implementation used by Herbie
rival = { path = "../rival-rs" }
