[package]
name = "rival"
version = "0.1.0"
edition = "2024"

[dependencies]
rug = { version = "1.24", features = ["float"] }
gmp-mpfr-sys = "1.6"
rand = "0.9"
ordered-float = "5.0"
indexmap = "2.12"
itertools = "0.14.0"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "rival"
path = "src/lib.rs"
